# ptcam

./: LICENSE  README.md  config.yaml  pyproject.toml  rtsp.py
src/ptcam/: __init__.py  app.py
src/ptcam/config/: config.py
src/ptcam/servo/: __init__.py  camera.py  object.py  servo.py  servo_controller.py  tiltservo.py
src/ptcam/tracker/: __init__.py  cli_tracker_runner.py  distance_calculator.py  frame_reader.py  gui_tracker_runner.py  tracker.py  tracker_processor.py  tracker_runner.py
src/ptcam/ui/: __init__.py  settings_dialog.py  video_stream.py  video_stream_app.py
